--- a/express/package.json
+++ b/express/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "test": "cross-env NODE_ENV=test jest --testTimeout=10000 --forceExit"
   },
   "author": "",
   "license": "ISC",
@@ -13,5 +14,10 @@
     "express": "^4.17.1",
     "jimp": "^0.16.1",
     "multer": "^1.4.3"
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.3",
+    "jest": "^27.3.0",
+    "supertest": "^6.1.6"
   }
 }
